master: フラグ管理の修正

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <main>
       <div class="content">
+        <p class="loading">Loading...</p>
         <canvas id="canvas"></canvas>
 
         <!-- videoタグはautoplay属性を付与しないと表示されない -->
